--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Times Finland – delivering accurate news, cultural insights, and thought-provoking content to keep you informed."
+    />
     <title>Times_Finland</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preload" href="image1.webp" as="image" />
   </head>
   <body>
     <div class="container" style="padding: 10px">
@@ -21,7 +26,7 @@
         "
       >
         <img
-          src="logo.png"
+          src="logo.webp"
           alt="Company Logo with letter T and F"
           style="
             resize: inline;
@@ -47,13 +52,13 @@
           "
         >
           <li>
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li>
             <a href="product.html">Products</a>
           </li>
           <li>
-            <a href="#">Contacts</a>
+            <a href="contact.html">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -86,7 +91,7 @@
 
       <img
         class="image"
-        src="image1.png"
+        src="image1.webp"
         alt="snow covered mountain with horizon"
         style="
           max-width: 50%;
