--- a/product.html
+++ b/product.html
@@ -9,12 +9,12 @@
     />
 
     <title>Product- Times_Finland</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preload" href="logo.webp" as="image" />
+    <link rel="stylesheet" href="style.css" fetchpriority="high" />
+    <link rel="preload" href="logo.webp" as="image" fetchpriority="high" />
     <link rel="preload" href="banners.webp" as="image " fetchpriority="high" />
-    <link rel="preload" href="p1alt.webp" as="image" />
-    <link rel="preload" href="p2.webp" as="image" />
-    <link rel="preload" href="p3.webp" as="image" />
+    <link rel="preload" href="p1alt.webp" as="image" fetchpriority="high" />
+    <link rel="preload" href="p2.webp" as="image" fetchpriority="high" />
+    <link rel="preload" href="p3.webp" as="image" fetchpriority="high" />
   </head>
   <body>
     <div class="container" style="padding: 10px">
